--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
+
         <Button
-            android:layout_margin="20dp"
+            android:layout_margin="15dp"
             android:id="@+id/route"
             android:layout_width="335dp"
             android:layout_height="138dp"
-            android:text="Button"
+            android:text="ROUTE"
             />
 
         <Button
-            android:layout_margin="20dp"
+            android:layout_margin="15dp"
             android:id="@+id/station"
             android:layout_width="335dp"
             android:layout_height="138dp"
-            android:text="Button"
+            android:text="BETWEEN STATION"
             />
         <Button
-            android:layout_margin="20dp"
+            android:layout_margin="15dp"
             android:id="@+id/fare"
             android:layout_width="335dp"
             android:layout_height="138dp"
-            android:text="Button"
+            android:text="FARE"
         />
-    </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
